Remove "--enable-native-access=ALL-UNNAMED" as it conflicts with the JRE CDS archive